Corrected spacing in Select2 to match regular dropdowns

--- a/src/components/05-components/v3-pat/select-system/_styles.scss
+++ b/src/components/05-components/v3-pat/select-system/_styles.scss
@@ -75,7 +75,7 @@ $select-system-height: 36px;
 		border-radius: $border-radius-default;
 		line-height: 0;
 		min-height: $select-system-height;
-		padding-right: 36px;
+		padding-right: 26px;
 		transition: all 0.1s ease-in;
 
 		&:hover {
@@ -141,7 +141,7 @@ $select-system-height: 36px;
 		.select2-selection__rendered {
 			color: $dark-grey;
 			line-height: $select-system-height;
-			padding: 0 $sapphire-sizes--small;
+			padding: 0 $sapphire-sizes--medium;
 
 			.select2-search {
 				height: calc(#{$select-system-height} - 2px);
